--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
 <% if logged_in? %>
 <form action="/session" method="post">
+	<input type="hidden" name="authenticity_token" value="<%=form_authenticity_token%>">
 	<input type="hidden" name="_method" value="delete">
 
 	<input type="submit" value="Logout">
