changed authentication to use devise

--- a/app/assets/templates/articles/index_article_show.jst.ejs
+++ b/app/assets/templates/articles/index_article_show.jst.ejs
@@ -1,1 +1,1 @@
-<h3 class="article_frontpage"><%=article.escape('news_source')%>: <%=article.escape('title')%></h3>
+<li><a href="#/articles/<%=article.id%>" class="article-link"><h3 class="article-frontpage"><%=article.escape('news_source')%>: <%=article.escape('title')%></a></h3></li>
