--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,17 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 
 <%= yield %>
 
-<% if logged_in? %>
-<form action="/session" method="post">
-	<input type="hidden" name="authenticity_token" value="<%=form_authenticity_token%>">
-	<input type="hidden" name="_method" value="delete">
 
-	<input type="submit" value="Logout">
-</form>
-<% end %>
 
 </body>
 </html>
