annotate button works

--- a/app/assets/templates/articles/snippet_link.jst.ejs
+++ b/app/assets/templates/articles/snippet_link.jst.ejs
@@ -1,1 +1,1 @@
-<a class="snippet-link" href="#/articles/<%=articleId%>/snippets/1"><%=String(snippet)%></a>
+<a class="snippet-link" href="#/articles/<%=articleId%>/snippets/<%=snippet.id%>"><%=String(snippet)%></a>
