--- a/app/assets/templates/snippets/snippet_link.jst.ejs
+++ b/app/assets/templates/snippets/snippet_link.jst.ejs
@@ -1,1 +1,1 @@
-<a class="snippet-link" href="#/articles/<%=snippet.escape("article_id")%>/snippets/<%=snippet.id%>"><%=snippet.escape("text")%></a>
+<a class="snippet-link" data-id="<%=snippet.id%>" href="#/articles/<%=snippet.escape("article_id")%>/snippets/<%=snippet.id%>"><%=snippet.escape("text")%></a>
