--- a/app/assets/templates/topbar/topbar.jst.ejs
+++ b/app/assets/templates/topbar/topbar.jst.ejs
@@ -1,4 +1,4 @@
-<div id="frontpage-link-wrapper" class="topbar-button"><a href="#" id="frontpage-link">Front Page</a></div>
+<div id="frontpage-link-wrapper" class="topbar-button"><a href="#" id="frontpage-link">Home</a></div>
 <div id="new-article-link-wrapper" class="topbar-button"> <a href="#/new_article" id="new-article-link">New Article</a></div>
 <div id="searchbar-wrapper" class="topbar-button"><input type="text" id="searchBar" name="search[value]"></div>
 <% if (!!currentUser.id) { %>
