cleaned up querup queries, added postgres

--- a/app/assets/templates/articles/new.jst.ejs
+++ b/app/assets/templates/articles/new.jst.ejs
@@ -1,3 +1,22 @@
 <form>
-	<input type="text" value="<%= newArticle.escape('title')%>" id="newArticleTitle"
+	<label for="newArticleUrl">Link:</label>
+	<input type="text" id="newArticleUrl" name="article[url] "value="<%= newArticle.escape('url')%>" >
+	<br />
+
+	<label for="newArticleTitle">Title:</label>
+	<input type="text" id="newArticleTitle" name="article[title] "value="<%= newArticle.escape('title')%>" >
+	<br />
+
+	<label for="newArticleSource">Source:</label>
+	<input type="text" id="newArticleSource" name="article[news_source] "value="<%= newArticle.escape('news_source')%>">
+	<br />
+
+	<label for="newArticleBody">Body:</label>
+	<textarea id="newArticleBody" name="article[body]"><%=newArticle.escape("body")%></textarea>
+
+	
+
+
+
+
 </form>
