working on articleg on article notice after submit

--- a/app/assets/templates/articles/article_show.jst.ejs
+++ b/app/assets/templates/articles/article_show.jst.ejs
@@ -1,3 +1,4 @@
 <h3 class="article-show-title"><%= article.escape("title") %> </h3>
+<div id="article-notice"></div>
 <p class="article-body"> <%= article.escape("body")%></p>
 <br />
