--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div id="topbar"></div><br />
+<div id="notices"></div><br />
 
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
