added some login stuff

--- a/app/assets/stylesheets/topbar.css.scss
+++ b/app/assets/stylesheets/topbar.css.scss
@@ -1,5 +1,6 @@
 .topbar {
 	float:top;
+	width: auto;
 }
 .topbar-button {
 	float:left;
@@ -8,4 +9,9 @@
 
 #frontpage_title {
 text-align: center;
+}
+
+#user-info {
+	float:right;
+	margin-right: 200px;
 }
