--- a/app/assets/templates/articles/index_article_show.jst.ejs
+++ b/app/assets/templates/articles/index_article_show.jst.ejs
@@ -1,1 +1,1 @@
-<li><a href="#/articles/<%=article.id%>" class="article-link"><div class="article-frontpage"><%=article.escape('news_source')%>: <%=article.escape('title')%></div></a></li>
+<li><a href="#/articles/<%=article.id%>" class="article-link"><%=article.escape('news_source')%>: <%=article.escape('title')%></a></li>
