--- a/app/assets/stylesheets/session.css.scss
+++ b/app/assets/stylesheets/session.css.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the session controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.hidden {
+	display: none;
+}
+
+#login-div {
+	z-index:100;
+	position: absolute;
+	background-color: white;
+}
+
+#signup-div {
+	z-index:100;
+	position: absolute;
+	background-color: white;
+}
+
