only users can post snippets

--- a/app/assets/templates/articles/annotate_popup.jst.ejs
+++ b/app/assets/templates/articles/annotate_popup.jst.ejs
@@ -1,1 +1,1 @@
-<button class="annotate-button" style="position:absolute; top: <%=y%>px; left: <%=x%>px; cursor:pointer;">Annotate</button>
+<button id="annotate-button" class="popup" style="top: <%=y%>px; left: <%=x%>px; cursor:pointer;">Annotate</button>
