--- a/app/assets/templates/snippets/new_form.jst.ejs
+++ b/app/assets/templates/snippets/new_form.jst.ejs
@@ -1,4 +1,4 @@
-<div class="new-annotation-form">
+<div class="popup" id="new-annotation-form">
 <label for="new-annotation-text">Annotation:</label>
 <textarea id="new-annotation-text"></textarea>
 <button class="new-annotation-submit">Submit</button>
