added search navigation

--- a/app/assets/templates/topbar/topbar.jst.ejs
+++ b/app/assets/templates/topbar/topbar.jst.ejs
@@ -1,6 +1,7 @@
 <div id="frontpage-link-wrapper" class="topbar-button"><a href="#" id="frontpage-link">Home</a></div>
 <div id="new-article-link-wrapper" class="topbar-button"> <a href="#/new_article" id="new-article-link">New Article</a></div>
-<div id="searchbar-wrapper" class="topbar-button"><input type="text" id="searchBar" name="search[value]"></div>
+<div id="searchbar-wrapper" class="topbar-button"><input class="searchbar" id="search-bar"></input></div>
+
 <div id="user-info">
 	<% if (!!currentUser.id) { %>
 			<div id="profile-link-wrapper" class="topbar-button">
