added a bunch of stuff

--- a/app/assets/stylesheets/root.css.scss
+++ b/app/assets/stylesheets/root.css.scss
@@ -4,4 +4,12 @@
 
 .popup {
 	position: absolute;
+	background-color: white;
+}
+#new-annotation-text {
+	float:bottom;
+}
+
+#new-annotation-submit {
+	float:bottom;
 }
