single upvotes are working

--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -11,6 +11,10 @@
 	font-size: 12px;
 }
 
-.selected {
-	background-color: black;
+.upvoted {
+	background-color: green;
+}
+
+.downvoted {
+	background-color: blue;
 }
