--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,9 @@
 
 </head>
 <body>
-<div id="topbar"></div><br />
-<div id="notices"></div><br />
+<div id="topbar"></div>
+<div id="notices"></div>
+<div id="sidebar"></div>
 
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
