added some formatting

--- a/app/assets/stylesheets/topbar.css.scss
+++ b/app/assets/stylesheets/topbar.css.scss
@@ -1,17 +1,21 @@
-.topbar {
+/*.topbar {
 	float:top;
 	width: auto;
 }
 .topbar-button {
 	float:left;
 	margin: 5px;
+}*/
+
+#title {
+	text-align: center;
 }
 
-#frontpage_title {
-text-align: center;
+#IQ-points {
+	font-color: white;
 }
 
-#user-info {
+/*#user-info {
 	float:right;
 	margin-right: 200px;
-}
+}*/
