--- a/app/assets/templates/articles/annotate_popup.jst.ejs
+++ b/app/assets/templates/articles/annotate_popup.jst.ejs
@@ -1,1 +1,1 @@
-<button id="annotate-button" class="popup" style="top: <%=y%>px; left: <%=x%>px; cursor:pointer;">Annotate</button>
+<button id="annotate-button" class="tiny round secondary button popup" style="top: <%=y%>px; left: <%=x%>px; cursor:pointer;">Annotate</button>
