--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,23 +1,48 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>NewsGenius</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-  <%= javascript_tag "var AUTH_TOKEN = '#{form_authenticity_token}';" if protect_against_forgery? %>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7 ]> <html class="ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]>    <html class="ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]>    <html class="ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--> <html lang="en"> <!--<![endif]-->
+  <head>
+  	<meta charset="utf-8" />
 
-</head>
-<body>
-<div id="topbar"></div>
-<div id="notices"></div>
-<div id="sidebar"></div>
+  	<!-- Uncomment to make IE8 render like IE7 -->
+  	<!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
 
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+  	<!-- Set the viewport width to device width for mobile -->
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<%= yield %>
+  	<title><%= content_for?(:title) ? yield(:title) : "NewsGenius" %></title>
 
+  	<%= stylesheet_link_tag    "application" %>
+  	<%= javascript_include_tag "vendor/custom.modernizr" %>
+  	  <%= javascript_tag "var AUTH_TOKEN = '#{form_authenticity_token}';" if protect_against_forgery? %>
+    <%= csrf_meta_tags %>
+  </head>
 
-</body>
+  <body>
+
+  	<div id="topbar" class="row"></div>
+  	</div>
+    <div class="row">
+      <div id="title" class="small-12 columns">
+      </div>
+    </div>
+
+  	<div id="content" class="row">
+  		<div id="sidebar" class="small-2 columns"></div>
+  		<div id="main-content-wrapper" class="small-10 columns">
+					<div id="main-content" class="row">
+						<div id="main" class="small-8 columns"></div>
+						<div id="explanation" class="small-4 columns"></div>
+					</div>
+			</div>
+  	</div>
+
+    <%= yield %>
+
+    
+    <%= javascript_include_tag "application" %>
+  </body>
 </html>
