--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,5 +9,92 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require foundation_and_overrides
  *= require_tree .
  */
+
+
+
+.popup {
+	/*position: absolute;*/
+	/*background-color: white;*/
+}
+#new-annotation-text {
+	/*float:bottom;*/
+}
+
+#new-annotation-submit {
+	/*float:bottom;*/
+}
+
+.annotation-list {
+	background-color: white;
+}
+
+.dropdown {
+
+	width: 150px;
+	/*float: top;*/
+	z-index:100;
+	position: absolute;
+/*	background-color: white;
+*/}
+
+.search-result {
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
+#overlay {
+  position: fixed; 
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: 0.5;
+  filter: alpha(opacity=50);
+}
+
+#search {
+  text-align: center;
+}
+
+#search-bar {
+  postition: relative;
+}
+
+#modal {
+    position:absolute;
+    background:url(tint20.png) 0 0 repeat;
+    background:rgba(0,0,0,0.2);
+    border-radius:14px;
+    padding:8px;
+}
+
+#content {
+  border-radius:8px;
+  background:#fff;
+  padding:20px;
+}
+
+.hidden {
+  display: none;
+}
+
+/*#newArticleBody {
+  width: 400px;
+  height: 150px;
+}*/
+
+.annotator {
+  font-size: 12px;
+}
+
+.upvoted {
+  background-color: green;
+}
+
+.downvoted {
+  background-color: blue;
+}
