--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,9 @@
  */
 
 
+ul {
+  list-style-type: none;
+}
 
 .popup {
 	/*position: absolute;*/
@@ -84,9 +87,6 @@
   padding:20px;
 }
 
-#main {
-  
-}
 
 .hidden {
   display: none;
