--- a/app/assets/templates/annotations/new.jst.ejs
+++ b/app/assets/templates/annotations/new.jst.ejs
@@ -1,5 +1,6 @@
-<p>"<%=snippet.escape("text")%>"</p>
-
+<span id="click-off">   Click anywhere in the article to close.</span><br /><br />
+<span id="snippet-quote">"<%=snippet.escape("text")%>"</span><br />
+<br /><br />
 <form class="new-annotation-form">
 	<textarea id="new-annotation-text" placeholder="Say something insightful..."></textarea>
 	<input type="submit" id="new-annotation-submit" value="submit">
