--- a/app/assets/templates/articles/index.jst.ejs
+++ b/app/assets/templates/articles/index.jst.ejs
@@ -1,4 +1,4 @@
-<h3>Editor's picks</h3>
-
 <h5 style="align: center">Welcome to NewsGenius!  To get started, click an article below.  You can explain phrases in an article by selecting text and clicking "annotate".  Upvote the comments that you think are clear and informative.
-</h5>
+</h5><br /><br />
+
+<h3>Newest Articles</h3>
