--- a/app/assets/templates/articles/index_article_show.jst.ejs
+++ b/app/assets/templates/articles/index_article_show.jst.ejs
@@ -1,1 +1,2 @@
-<li><a href="#/articles/<%=article.id%>" class="article-link"><%=article.escape('news_source')%>: <%=article.escape('title')%></a></li>
+<li><a href="#/articles/<%=article.id%>" class="article-link">
+	<%=article.escape('news_source')%>: <%=article.escape('title')%>: - <%=date%></a></li>
