solved a few bugsbugs, updated popups

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,13 @@ ul {
 }
 
 
+#newArticleBody {
+  height: 200px;
+}
+
+#newArticleTopic {
+  width: 150px;
+}
 
 .popup {
 	/*position: absolute;*/
