fixed line break f formatting

--- a/app/assets/templates/articles/article_show.jst.ejs
+++ b/app/assets/templates/articles/article_show.jst.ejs
@@ -2,5 +2,5 @@
 	<div id="article-saved">Article Posted.</div>
 <% } %>
 <h3 class="article-show-title"><a href="<%=article.escape('url')%>" class="article-link"><%= article.escape("title") %></a></h3>
-<p class="article-body"> <%= article.escape("body")%></p>
+<pre class="article-body"> <%= article.escape("body")%></pre>
 <br />
