--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
       </div>
     </div>
 
-  	<div id="content" class="row">
+  	<div id="maincon" class="row">
   		<div id="sidebar" class="small-2 columns"></div>
   		<div id="main-content-wrapper" class="small-10 columns">
 					<div id="main-content" class="row">
@@ -42,7 +42,6 @@
 
     <%= yield %>
 
-    
     <%= javascript_include_tag "application" %>
   </body>
 </html>
