--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -28,7 +28,7 @@ $em-base: 16px !default;
 
 $default-float: left;
 
-// $body-bg: #fff;
+ $body-bg: auto;
 // $body-font-color: #222;
 // $body-font-family: georgia, "times new roman", times, serif;
 // $body-font-weight: normal;
