--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -137,7 +137,7 @@ $default-float: left;
 
 // Heading font styles
 
-// $header-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+// $header-font-family: Georgia, "Times New Roman", serif;
 // $header-font-weight: bold;
 // $header-font-style: normal;
 // $header-font-color: #222;
